k8s/webapp/deployment-hardened.yaml
# k8s/webapp/deployment-hardened.yaml — VERSION CASSÉE (pour observation)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: webapp
  labels:
    app: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      securityContext:
        runAsNonRoot: true # interdit de démarrer en root...
        runAsUser: 101 # utilisateur nginx non privilégié
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: webapp
          image: nginxinc/nginx-unprivileged:1.27-alpine # image non-root
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false # nginx écrit ses fichiers temporaires
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
