k8s/webapp/deployment.yaml
# k8s/webapp/deployment.yaml — À COMPLÉTER (remplacez chaque __À_COMPLÉTER__)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: webapp
  labels:
    app: webapp
  annotations:
    kubernetes.io/change-cause: "Déploiement de nginx:1.27.2-alpine"
spec:
  replicas: 2 # TODO 1 — nombre de copies du pod (2)
  selector:
    matchLabels:
      app: webapp # TODO 2 — label qui identifie les pods gérés
  template:
    metadata:
      labels:
        app: webapp # TODO 3 — MÊME label que TODO 2
    spec:
      containers:
        - name: webapp
          image: nginx:1.27.2-alpine # TODO 4 — nginx épinglé, JAMAIS latest (ex.nginx:1.27-alpine)
          ports:
            - containerPort: 80 # TODO 5 — port d'écoute de nginx (80)
          resources:
            requests:
              cpu: 50m # TODO 1 — base de calcul du HPA (ex. 50m)
              memory: 64Mi
            limits:
              cpu: 200m # TODO 2 — plafond CPU (ex. 200m)
              memory: 128Mi
          readinessProbe: # fournie : conditionne l'ajout aux endpoints du Service
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe: # fournie : redémarre le conteneur s'il ne répond plus
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: content
              mountPath: /usr/share/nginx/html
      volumes:
        - name: content
          configMap:
            name: webapp-content # TODO 3 — nom de la ConfigMap (webapp-content)
