k8s/webapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  namespace: webapp
  labels:
    app: webapp
spec:
  ingressClassName: nginx
  rules:
    - host: webapp.example.com # nom d'hôte de démonstration
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp
                port:
                  number: 80
